added error response on routes doc
